improve: optimize decaying leaves